--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center">
-      <h1 style="font-size: 90px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">The LearnHigh</h1>
-      <h1>Coming Soon...</h1>
+      <h1 style=" font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">The LearnHigh</h1>
+      <h2>Coming Soon...</h2>
       
-      <h2>We're working hard to improve our website and we'll ready to launch after</h2>
+      <h3>We're working hard to improve our website and we'll ready to launch after</h3>
       <div class="countdown d-flex justify-content-center" data-count="2021/12/31">
         <div>
           <h3>%d</h3>
