--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         </div>
       </div>
 
-      <div class="subscribe">
-        <h4>Subscribe now to get the latest updates!</h4>
-        <form action="forms/notify.php" method="post" role="form" class="php-email-form">
-          <div class="subscribe-form">
-            <input type="email" name="email"><input type="submit" value="Subscribe">
-          </div>
-          <div class="mt-2">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
+<!--       <div class="subscribe"> -->
+<!--         <h4>Subscribe now to get the latest updates!</h4> -->
+<!--         <form action="forms/notify.php" method="post" role="form" class="php-email-form"> -->
+<!--           <div class="subscribe-form"> -->
+<!--             <input type="email" name="email"><input type="submit" value="Subscribe"> -->
+<!--           </div> -->
+<!--           <div class="mt-2"> -->
+<!--             <div class="loading">Loading</div> -->
+<!--             <div class="error-message"></div> -->
             <div class="sent-message">Your notification request was sent. Thank you!</div>
-          </div>
-        </form>
-      </div>
+<!--           </div> -->
+<!--         </form> -->
+<!--       </div> -->
 
       <div class="social-links text-center">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -136,11 +136,11 @@
                   <p>A108 Adam Street<br>New York, NY 535022</p>
                 </div> -->
 
-                <div class="col-lg-4 info mt-4 mt-lg-0">
-                  <i class="bi bi-envelope"></i>
-                  <h4>Email:</h4>
-                  <p>info@learnhigh.com<br>contact@learnhigh.com</p>
-                </div>
+<!--                 <div class="col-lg-4 info mt-4 mt-lg-0"> -->
+<!--                   <i class="bi bi-envelope"></i> -->
+<!--                   <h4>Email:</h4> -->
+<!--                   <p>info@learnhigh.com<br>contact@learnhigh.com</p> -->
+<!--                 </div> -->
 
                 <!-- <div class="col-lg-4 info mt-4 mt-lg-0"> -->
                   <!-- <i class="bi bi-phone"></i> -->
