--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <!--           <div class="mt-2"> -->
 <!--             <div class="loading">Loading</div> -->
 <!--             <div class="error-message"></div> -->
-            <div class="sent-message">Your notification request was sent. Thank you!</div>
+<!--             <div class="sent-message">Your notification request was sent. Thank you!</div> -->
 <!--           </div> -->
 <!--         </form> -->
 <!--       </div> -->
