--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 <!--       </div> -->
 
       <div class="social-links text-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://twitter.com/soubhik_0001" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/kihbuos" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/kihbuos/" class="instagram"><i class="bi bi-instagram"></i></a>
+<!--         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a> -->
       </div>
 
     </div>
