--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>The LearnHigh</span></strong>. All Rights Reserved
-      </div>
+<!--       <div class="copyright">
+        &copy; Copyright 2021 <strong><span>The LearnHigh</span></strong>. All Rights Reserved
+      </div> -->
 <!--       <div class="credits">
       
       </div> -->
